// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`child rules all() rules - multiple failures: all() rules - match 1`] = `Array []`;

exports[`child rules all() rules - multiple failures: all() rules - multiple failures, custom messages 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Must start with an uppercase character and 5 chars or more",
    },
    "level": "error",
    "message": "Must start with an uppercase character and 5 chars or more",
    "path": Array [],
  },
]
`;

exports[`child rules all() rules - single failure, custom, common error: all() rules - multiple failures, common error 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Needs to be a capital letter followed by at least 4 lowercase characters",
    },
    "level": "error",
    "message": "Needs to be a capital letter followed by at least 4 lowercase characters",
    "path": Array [],
  },
]
`;

exports[`child rules all() rules - single failure, custom, common error: all() rules - single failure, common error 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Needs to start with a capital letter and then follow with lowercase characters",
    },
    "level": "error",
    "message": "Needs to start with a capital letter and then follow with lowercase characters",
    "path": Array [],
  },
]
`;

exports[`child rules all() rules - single failure: all() rules - match 1`] = `Array []`;

exports[`child rules all() rules - single failure: all() rules - single failure, custom message 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Must start with an uppercase character",
    },
    "level": "error",
    "message": "Must start with an uppercase character",
    "path": Array [],
  },
]
`;

exports[`child rules either() rules - all fail, custom, common error: either() rules - all fail, common error 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Needs to start with a capital letter, unless it's an iProduct",
    },
    "level": "error",
    "message": "Needs to start with a capital letter, unless it's an iProduct",
    "path": Array [],
  },
]
`;

exports[`child rules either() rules - all matches: either() rules - all match 1`] = `Array []`;

exports[`child rules either() rules - all matches: either() rules - no matches 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Must start with a capital R or Must end with \\"ed\\"",
    },
    "level": "error",
    "message": "Must start with a capital R or Must end with \\"ed\\"",
    "path": Array [],
  },
]
`;

exports[`child rules either() rules - single failure: either() rules - match 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Must be rgb(num, num, num) format or Must be hex color with #-prefix",
    },
    "level": "error",
    "message": "Must be rgb(num, num, num) format or Must be hex color with #-prefix",
    "path": Array [],
  },
]
`;

exports[`child rules either() rules - single failure: either() rules - single failure, custom message 1`] = `
Array [
  Object {
    "item": Object {
      "message": "Must be rgb(num, num, num) format or Must be hex color with #-prefix",
    },
    "level": "error",
    "message": "Must be rgb(num, num, num) format or Must be hex color with #-prefix",
    "path": Array [],
  },
]
`;
